# Nicety

./: .clang-format  .gitignore  CMakeLists.txt
.zed/: debug.json
src/: application_core.c  application_core.h  base.h  core.c  core.h  document.c  document.h  layer.h  main.c  menu.c  menu.h  nicety.c  nicety.h  ui.c  ui.h
